--- a/help.html
+++ b/help.html
@@ -3,25 +3,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>RunMeasure • Aide</title>
+  <title>Aide • RunMeasure</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap">
-    <header class="card center">
+    <header class="center">
       <h1 class="brand">Aide</h1>
       <div class="chips">
         <a class="btn btn-ghost" href="index.html">← Accueil</a>
         <a class="btn btn-ghost" href="options.html">Options</a>
       </div>
     </header>
-
     <section class="card">
-      <h2>Questions fréquentes</h2>
-      <p><b>Q.</b> Comment générer le QR ? <br><b>R.</b> Cliquez sur <span class="kbd">📱 Générer le QR JSON</span> ou appuyez sur <span class="kbd">Stop</span> une fois le test fini.</p>
-      <p><b>Q.</b> Où régler les fractions de tour ? <br><b>R.</b> Dans Cooper / Demi-Cooper ou Minuteur+Distance : choisissez la longueur de piste et la fraction (0, 1/4, 1/2, 3/4) à la fin.</p>
-      <p><b>Q.</b> Peut-on changer le pas d’intermédiaires ? <br><b>R.</b> Oui : en mode Intermédiaires, réglez la distance totale et le pas (100m, 200m, …).</p>
+      <h2>Mode d’emploi</h2>
+      <ul>
+        <li>Renseignez l’élève (Nom, Prénom, Classe, Sexe) depuis « Démarrer ».</li>
+        <li>Choisissez un mode. Les boutons de contrôle sont gros et centrés pour faciliter l’usage iPad.</li>
+        <li>En fin de test, les modes (sauf Chrono & Minuteur) génèrent un QR (pour ScanProf) avec les infos utiles.</li>
+        <li>Intermédiaires : distance totale (ex: 800) et pas (ex: 200), cliquez « Intermédiaire » à chaque passage.</li>
+        <li>Cooper / 1/2 Cooper : indiquez la longueur de piste, utilisez « Tour » pendant le test, puis ajustez une fraction (0, 1/4, 1/2, 3/4) à la fin.</li>
+      </ul>
     </section>
   </div>
+  <footer>RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG  - JB</footer>
 </body>
 </html>
