--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
 </head>
 <body>
   <div class="wrap">
-    <header class="card center">
+    <header>
       <h1 class="brand">RunMeasure</h1>
-      <div class="chips">
-        <a class="btn btn-primary" href="options.html">Démarrer</a>
-        <a class="btn btn-ghost" href="help.html">Aide</a>
-        <a class="btn btn-ghost" href="safety.html">Fiche sécurité</a>
-      </div>
-      <div class="muted" style="margin-top:10px">Pack “EPS iPad” — QR intégrés</div>
     </header>
-
-    <section class="card">
-      <h2>Bienvenue 👋</h2>
-      <p>Choisissez “Démarrer”, renseignez l’élève, puis sélectionnez un mode (Chrono, Minuteur, Intermédiaires, Cooper…).</p>
-    </section>
-
-    <footer class="muted">RunMeasure — EPS Lycée Vauban (Lux.)</footer>
+    <main class="card center">
+      <div class="chips" style="margin:12px 0 6px">
+        <a class="btn btn-primary" href="options.html">Démarrer</a>
+      </div>
+      <div class="chips">
+        <a class="btn btn-ghost" href="safety.html">Fiche sécurité</a>
+        <a class="btn btn-ghost" href="help.html">Aide</a>
+      </div>
+    </main>
   </div>
+  <footer>RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG  - JB</footer>
 </body>
 </html>
