--- a/safety.html
+++ b/safety.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>RunMeasure • Fiche sécurité</title>
+  <title>Fiche sécurité • RunMeasure</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap">
-    <header class="card center">
+    <header class="center">
       <h1 class="brand">Fiche sécurité</h1>
       <div class="chips">
         <a class="btn btn-ghost" href="index.html">← Accueil</a>
@@ -16,13 +16,21 @@
       </div>
     </header>
     <section class="card">
-      <h2>Rappels</h2>
+      <h2>Bonnes pratiques</h2>
       <ul>
-        <li>Échauffement adapté avant test d’endurance.</li>
-        <li>Hydratation et pauses si besoin.</li>
-        <li>Arrêt immédiat en cas de gêne, douleur ou vertige.</li>
+        <li>Échauffement progressif (10–15 min) avant test d’endurance.</li>
+        <li>Hydratation régulière ; vêtements adaptés à la météo.</li>
+        <li>Arrêt immédiat en cas de douleur, gêne respiratoire, vertiges.</li>
+        <li>Respect des trajectoires et dépassements sur piste.</li>
+      </ul>
+      <h2>En cas de blessure</h2>
+      <ul>
+        <li>Protéger la zone, arrêter l’activité.</li>
+        <li>Glacer/comprimer/élever (GREC) si entorse/contusion.</li>
+        <li>Alerter l’adulte référent et prévenir les secours si nécessaire.</li>
       </ul>
     </section>
   </div>
+  <footer>RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG  - JB</footer>
 </body>
 </html>
