--- a/aide.html
+++ b/aide.html
@@ -3,25 +3,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>RunMeasure • Aide</title>
+  <title>Aide • RunMeasure</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap">
-    <header class="card center">
-      <h1 class="brand" style="font-size:34px">RunMeasure — Aide</h1>
+    <header class="center">
+      <h1 class="brand">Aide</h1>
       <div class="chips">
         <a class="btn btn-ghost" href="index.html">← Accueil</a>
+        <a class="btn btn-ghost" href="options.html">Options</a>
       </div>
     </header>
     <section class="card">
-      <h2>QR JSON</h2>
-      <p>Les modes « Temps intermédiaire », « Demi-Cooper (6′) » et « Cooper (12′) » génèrent un QR JSON compatible ScanProf.</p>
+      <h2>Mode d’emploi</h2>
       <ul>
-        <li>QR manuel : bouton « 📱 Générer le QR JSON »</li>
-        <li>QR auto : quand vous appuyez sur « Stop »</li>
+        <li>Renseignez l’élève (Nom, Prénom, Classe, Sexe) depuis « Démarrer ».</li>
+        <li>Choisissez un mode. Les boutons de contrôle sont gros et centrés pour l’iPad.</li>
+        <li>En fin de test, QR (sauf Chrono & Minuteur) avec toutes les infos utiles.</li>
+        <li>Intermédiaires : distance totale (ex: 800) et pas (ex: 200), cliquez « Intermédiaire » à chaque passage.</li>
+        <li>Cooper / 1/2 Cooper : longueur de piste, bouton « Tour » pendant le test, fraction (0, 1/4, 1/2, 3/4) à la fin.</li>
       </ul>
     </section>
   </div>
+  <footer>RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG  - JB</footer>
 </body>
 </html>
