--- a/help.html
+++ b/help.html
@@ -19,10 +19,10 @@
       <h2>Mode d’emploi</h2>
       <ul>
         <li>Renseignez l’élève (Nom, Prénom, Classe, Sexe) depuis « Démarrer ».</li>
-        <li>Choisissez un mode. Les boutons de contrôle sont gros et centrés pour faciliter l’usage iPad.</li>
-        <li>En fin de test, les modes (sauf Chrono & Minuteur) génèrent un QR (pour ScanProf) avec les infos utiles.</li>
+        <li>Choisissez un mode. Les boutons de contrôle sont gros et centrés pour l’iPad.</li>
+        <li>En fin de test, QR (sauf Chrono & Minuteur) avec toutes les infos utiles.</li>
         <li>Intermédiaires : distance totale (ex: 800) et pas (ex: 200), cliquez « Intermédiaire » à chaque passage.</li>
-        <li>Cooper / 1/2 Cooper : indiquez la longueur de piste, utilisez « Tour » pendant le test, puis ajustez une fraction (0, 1/4, 1/2, 3/4) à la fin.</li>
+        <li>Cooper / 1/2 Cooper : longueur de piste, bouton « Tour » pendant le test, fraction (0, 1/4, 1/2, 3/4) à la fin.</li>
       </ul>
     </section>
   </div>
