--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="chips">
         <a class="btn btn-ghost" href="safety.html">Fiche sécurité</a>
-        <a class="btn btn-ghost" href="help.html">Aide</a>
+        <a class="btn btn-ghost" href="aide.html">Aide</a>
       </div>
     </main>
   </div>
