--- a/mode.html
+++ b/mode.html
@@ -13,7 +13,7 @@
       <div class="chips">
         <a class="btn btn-ghost" href="options.html">← Options</a>
         <a class="btn btn-ghost" href="safety.html">Fiche sécurité</a>
-        <a class="btn btn-ghost" href="help.html">Aide</a>
+        <a class="btn btn-ghost" href="aide.html">Aide</a>
         <button id="btn-full" class="btn btn-primary">⛶ Plein écran</button>
       </div>
     </header>
@@ -90,7 +90,8 @@
     </div>
   </div>
 
-  <script defer src="js/qrcode.min.js"></script>
+  <!-- IMPORTANT: local QR at ROOT -->
+  <script defer src="qrcode.min.js"></script>
   <script defer src="app.js"></script>
   <footer>RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG  - JB</footer>
 </body>
