--- a/options.html
+++ b/options.html
@@ -13,7 +13,7 @@
       <div class="chips">
         <a class="btn btn-ghost" href="index.html">← Accueil</a>
         <a class="btn btn-ghost" href="safety.html">Fiche sécurité</a>
-        <a class="btn btn-ghost" href="help.html">Aide</a>
+        <a class="btn btn-ghost" href="aide.html">Aide</a>
       </div>
     </header>
 
