--- a/safety.html
+++ b/safety.html
@@ -19,7 +19,7 @@
       <h2>Bonnes pratiques</h2>
       <ul>
         <li>Échauffement progressif (10–15 min) avant test d’endurance.</li>
-        <li>Hydratation régulière ; vêtements adaptés à la météo.</li>
+        <li>Hydratation régulière ; vêtements adaptés.</li>
         <li>Arrêt immédiat en cas de douleur, gêne respiratoire, vertiges.</li>
         <li>Respect des trajectoires et dépassements sur piste.</li>
       </ul>
