--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Chrono Intervalles EPS</title>
 
-<!-- QRCode.js fiable (CDN) -->
-<script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
-
 <style>
   :root{ --bg:#0f172a; --panel:#111827; --ink:#e5e7eb; --muted:#94a3b8; --accent:#22c55e; --accent2:#3b82f6; --danger:#ef4444; --warn:#f59e0b; --card:#0b1220; }
   *{box-sizing:border-box} html,body{height:100%}
@@ -19,7 +16,7 @@
   .hero h1{ margin:0 0 10px; font-weight:900; letter-spacing:.6px; font-size:clamp(2rem,6vw,3rem) }
   .hero p{ margin:0 0 20px; color:var(--muted); font-size:clamp(1rem,2.4vw,1.2rem) }
   .btns{ display:flex; flex-wrap:wrap; gap:12px; justify-content:center }
-  button,.btn{ border:none; border-radius:14px; padding:14px 20px; font-weight:800; letter-spacing:.3px; background:#1f2a3a; color:var(--ink); cursor:pointer; font-size:1rem; min-width:180px; display:inline-flex; align-items:center; justify-content:center }
+  button,.btn{ border:none; border-radius:14px; padding:14px 20px; font-weight:800; letter-spacing:.3px; background:#1f2a3a; color:#e5e7eb; cursor:pointer; font-size:1rem; min-width:180px; display:inline-flex; align-items:center; justify-content:center }
   button:active,.btn:active{ transform:translateY(1px) }
   .b-primary{background:var(--accent2)} .b-go{background:var(--accent)} .b-stop{background:var(--danger)} .b-lap{background:var(--warn)} .b-ghost{background:#0a1220;border:1px solid #223146}
   .title{ text-align:center; font-weight:800 } .title h2{ margin:.2rem 0 .1rem; font-size:clamp(1.2rem,2vw+.8rem,2rem) } .title p{ margin:0; color:var(--muted); font-size:.95rem }
@@ -42,7 +39,8 @@
   .badge{ display:inline-block; font-weight:800; padding:6px 10px; border-radius:999px; background:#0a1220; border:1px solid #223146; margin-right:8px }
   .meta{ text-align:center; color:#cbd5e1; margin:4px 0 10px }
   .qr-wrap{ display:flex; gap:12px; align-items:flex-start; flex-wrap:wrap; justify-content:center }
-  #qrcode canvas{ background:#fff; border-radius:10px; padding:10px }
+  #qrcode{ background:#fff; border-radius:12px; padding:8px; border:1px solid #d1d5db }
+  #qrcode svg{ display:block }
   footer{ margin-top:auto; background:#e5e7eb; color:#111827; text-align:center; padding:10px 12px; font-weight:700; border-top:1px solid #cbd5e1; }
 </style>
 </head>
@@ -161,13 +159,14 @@
 
   <section class="card" style="margin-top:16px">
     <h3 class="section-title">QR (auto) & Export</h3>
-    <div class="btns" style="justify-content:center">
+    <div class="btns" style="justify-content:center; gap:8px">
       <button id="exportCSV" class="b-ghost" disabled>Exporter CSV</button>
+      <button id="openFullQR" class="b-primary" disabled>Agrandir le QR</button>
     </div>
     <div class="qr-wrap" style="margin-top:10px">
       <div id="qrcode"></div>
     </div>
-    <p class="hint" style="text-align:center;margin-top:8px">Le QR s’affiche automatiquement à la fin de la course.</p>
+    <p class="hint" style="text-align:center;margin-top:8px">Le QR s’affiche automatiquement à la fin de la course. Utilise “Agrandir le QR” si le scan est difficile.</p>
   </section>
 
   <div class="btns" style="margin-top:6px">
@@ -178,6 +177,15 @@
 <footer>
   ChronoIntrervalles - Equipe EPS Lycée Vauban - LUXEMBOURG -JB
 </footer>
+
+<!-- ====== Générateur QR SVG robuste (hors-ligne) – qrcode-generator (MIT) ====== -->
+<script>
+/*!
+ * qrcode-generator (MIT) – core minimal + createSvgTag
+ * Source: https://github.com/kazuhikoarase/qrcode-generator
+ */
+!function(){function u(a){throw a;}function v(a,b){this.typeNumber=a;this.errorCorrectLevel=b;this.modules=null;this.moduleCount=0;this.dataCache=null;this.dataList=[]}function w(a,b){this.mode=4;this.data=a}function x(){this.buffer=[];this.length=0}var y={L:1,M:0,Q:3,H:2};v.prototype={addData:function(a){this.dataList.push(new w(a))},isDark:function(a,b){if(null==this.modules[a]||null==this.modules[a][b])throw new Error(a+","+b);return this.modules[a][b]},getModuleCount:function(){return this.moduleCount},make:function(){if(1>this.typeNumber)for(var a=1;40>=a;a++){var b=new v(a,this.errorCorrectLevel);b.dataList=this.dataList.slice(0);b.makeImpl(!1);b.dataCache=b.createData();if(b.dataCache){this.typeNumber=a;break}}this.makeImpl(!0)},makeImpl:function(a){this.moduleCount=4*this.typeNumber+17;this.modules=Array(this.moduleCount);for(var b=0;b<this.moduleCount;b++){this.modules[b]=Array(this.moduleCount);for(var c=0;c<this.moduleCount;c++)this.modules[b][c]=null}this.setupPositionProbePattern(0,0);this.setupPositionProbePattern(this.moduleCount-7,0);this.setupPositionProbePattern(0,this.moduleCount-7);this.setupPositionAdjustPattern();this.setupTimingPattern();this.setupTypeInfo(a,0);7<=this.typeNumber&&this.setupTypeNumber(a);null==this.dataCache&&(this.dataCache=this.createData());this.mapData(this.dataCache)},setupTimingPattern:function(){for(var a=8;a<this.moduleCount-8;a++)null==this.modules[a][6]&&(this.modules[a][6]=0==a%2),null==this.modules[6][a]&&(this.modules[6][a]=0==a%2)},setupPositionProbePattern:function(a,b){for(var c=-1;7>=c;c++)if(!(a+c<=-1||this.moduleCount<=a+c))for(var d=-1;7>=d;d++)b+d<=-1||this.moduleCount<=b+d||(this.modules[a+c][b+d]=0<=c&&6>=c&&(0==d||6==d)||0<=d&&6>=d&&(0==c||6==c)||2<=c&&4>=c&&2<=d&&4>=d)},getBestMaskPattern:function(){for(var a=0,b=0,c=0;8>c;c++){this.makeImpl(!1);this.applyMaskPattern(c);var d=z.getLostPoint(this);0==c||d<a?(a=d,b=c):0}return this.applyMaskPattern(b),b},createData:function(){for(var a=A.getRSBlocks(this.typeNumber,this.errorCorrectLevel),b=new x,c=0;c<this.dataList.length;c++)this.dataList[c].write(b);for(c=0;c<a.length;c++){var d=a[c].dataCount;for(b.getLengthInBits()>8*d&&u(new Error("code length overflow. "+b.getLengthInBits()+">"+8*d));b.getLengthInBits()+4<=8*d;)b.put(0,4);for(;b.getLengthInBits()%8!=0;)b.putBit(!1)}for(;b.getLengthInBits()<8*d;)b.put(236,8),b.getLengthInBits()<8*d&&b.put(17,8);return B(b,a)},mapData:function(a){for(var b=this.getBestMaskPattern(),c=this.moduleCount-1,d=7,e=0,f=this.moduleCount-1;0<f;f-=2)for(6==f&&f--;;){for(var g=0;2>g;g++)if(null==this.modules[c-g][f]){var h=!1;e<a.length&&(h=1==(a[e]>>>d&1));z.getMask(b,c-g,f)&&(h=!h);this.modules[c-g][f]=h}if(d--,-1==d){e++;if(e>=a.length)break;d=7}c+=b?-1:1;if(0>c||c>=this.moduleCount){c+=b?1:-1;break}}},setupPositionAdjustPattern:function(){for(var a=z.getPatternPosition(this.typeNumber),b=0;b<a.length;b++)for(var c=0;c<a.length;c++){var d=a[b],e=a[c];if(null==this.modules[d][e])for(var f=-2;2>=f;f++)for(var g=-2;2>=g;g++)this.modules[d+f][e+g]=-2==f||2==f||-2==g||2==g||0==f&&0==g}},setupTypeNumber:function(a){for(var b=z.getBCHTypeNumber(this.typeNumber),c=0;18>c;c++){var d=!a&&1==(b>>c&1);this.modules[Math.floor(c/3)][c%3+this.moduleCount-8-3]=d;this.modules[c%3+this.moduleCount-8-3][Math.floor(c/3)]=d}},setupTypeInfo:function(a,b){for(var c=z.getBCHTypeInfo(y.M<<3|b),d=0;15>d;d++){var e=!a&&1==(c>>d&1);6>d?this.modules[d][8]=e:8>d?this.modules[d+1][8]=e:this.modules[this.moduleCount-15+d][8]=e;8>d?this.modules[8][this.moduleCount-d-1]=e:this.modules[8][14-d]=e}},applyMaskPattern:function(a){for(var b=0;b<this.moduleCount;b++)for(var c=0;c<this.moduleCount;c++)null!=this.modules[b][c]&&(this.modules[b][c]=this.modules[b][c]^z.getMask(a,b,c))}};var z=function(){var a=[[6,18],[6,22],[6,26],[6,30],[6,34],[6,22,38],[6,24,42],[6,26,46],[6,28,50],[6,30,54],[6,32,58],[6,34,62],[6,26,46,66],[6,26,48,70],[6,26,50,74],[6,30,54,78],[6,30,56,82],[6,30,58,86],[6,34,62,90],[6,28,50,72,94],[6,26,50,74,98]];return{PATTERN_POSITION_TABLE:a,getPatternPosition:function(b){return a[b-1]},getMask:function(b,c,d){switch(b){case 0:return 0==(c+d)%2;case 1:return 0==c%2;case 2:return 0==d%3;case 3:return 0==(c+d)%3;case 4:return 0==(Math.floor(c/2)+Math.floor(d/3))%2;case 5:return 0==c*d%2+c*d%3;case 6:return 0==(c*d%2+c*d%3)%2;case 7:return 0==((c*d%3+(c+d)%2))%2;default:throw new Error("bad maskPattern:"+b)}},getBCHTypeInfo:function(b){for(var c=b<<10;z.getBCHDigit(c)-z.getBCHDigit(1335)>=0;)c^=1335<<z.getBCHDigit(c)-z.getBCHDigit(1335);return b<<10|c},getBCHTypeNumber:function(b){for(var c=b<<12;z.getBCHDigit(c)-z.getBCHDigit(7973)>=0;)c^=7973<<z.getBCHDigit(c)-z.getBCHDigit(7973);return b<<12|c},getBCHDigit:function(b){for(var c=0;0!=b;)c++,b>>>=1;return c},getLostPoint:function(b){for(var c=b.getModuleCount(),d=0,e=0;e<c;e++)for(var f=0;f<c;f++){for(var g=0,h=b.isDark(e,f),k=-1;1>=k;k++)if(!(0>e+k||e+k>=c))for(var l=-1;1>=l;l++)0>f+l||f+l>=c||0==k&&0==l||h==b.isDark(e+k,f+l)&&g++;5<g&&(d+=3+g-5)}for(e=0;e<c-1;e++)for(f=0;f<c-1;f++){g=0;b.isDark(e,f)&&g++;b.isDark(e+1,f)&&g++;b.isDark(e,f+1)&&g++;b.isDark(e+1,f+1)&&g++;0==g||4==g?d+=3:0}for(e=0;e<c;e++)for(f=0;f<c-6;f++)b.isDark(e,f)&&!b.isDark(e,f+1)&&b.isDark(e,f+2)&&b.isDark(e,f+3)&&b.isDark(e,f+4)&&!b.isDark(e,f+5)&&b.isDark(e,f+6)&&(d+=40);for(f=0;f<c;f++)for(e=0;e<c-6;e++)b.isDark(e,f)&&!b.isDark(e+1,f)&&b.isDark(e+2,f)&&b.isDark(e+3,f)&&b.isDark(e+4,f)&&!b.isDark(e+5,f)&&b.isDark(e+6,f)&&(d+=40);for(var m=0,n=0,e=0;e<c;e++)for(f=0;f<c;f++)b.isDark(e,f)&&m++;n=Math.abs(100*m/c/c-50)/5*10;return d+=n}}}(),A={getRSBlocks:function(a,b){var c=C(a,b),d=c.length/3,e=[];for(a=0;a<d;a++)for(var f=c[3*a+0],g=c[3*a+1],h=c[3*a+2],k=0;k<f;k++)e.push({totalCount:g,dataCount:h});return e}},C=function(a,b){return D[4*(a-1)+["L","M","Q","H"].indexOf(["L","M","Q","H"][b])]},D=[1,26,19,9,1,26,16,10,1,26,13,11,1,26,9,13,1,44,34,16,1,44,28,18,1,44,22,22,1,44,16,26,1,70,55,26,1,70,44,34,2,35,17,10,2,35,13,12,2,35,9,14,1,100,80,36,2,50,32,18,2,50,24,22,4,25,9,16,2,121,97,40,2,60,38,22,2,60,26,26,4,30,13,18,2,146,116,48,3,58,36,22,4,36,20,26,4,36,14,16,2,86,68,27,4,43,27,11,6,43,19,14,6,43,15,18,2,98,78,31,4,49,31,14,6,32,14,16,6,39,14,16,2,121,97,40,2,60,38,22,6,43,19,26,6,43,15,26,2,146,116,48,6,73,43,26,6,36,20,26,6,36,16,26];x.prototype={getBuffer:function(){return this.buffer},getLengthInBits:function(){return this.length},put:function(a,b){for(var c=0;c<b;c++)this.putBit(1==(a>>>b-c-1&1))},putBit:function(a){var b=this.length>>>3;this.buffer.length<=b&&this.buffer.push(0);a&&(this.buffer[b]|=128>>>this.length%8);this.length++}};function E(a,b){for(var c=0;c<a.length&&0==a[c];)c++;this.num=a.length-c;this.buf=Array(this.num);for(var d=0;d<this.num;d++)this.buf[d]=a[d+c]}E.prototype={get:function(a){return this.buf[a]},getLength:function(){return this.num},multiply:function(a){for(var b=Array(this.getLength()+a.getLength()-1),c=0;c<this.getLength();c++)for(var d=0;d<a.getLength();d++)b[c+d]^=F.gexp(F.glog(this.get(c))+F.glog(a.get(d)));return new E(b)},mod:function(a){if(this.getLength()-a.getLength()<0)return this;var b=F.glog(this.get(0))-F.glog(a.get(0)),c=Array(this.getLength());for(var d=0;d<this.getLength();d++)c[d]=this.get(d);for(d=0;d<a.getLength();d++)c[d]^=F.gexp(F.glog(a.get(d))+b);return(new E(c)).mod(a)}};var F={};F.glog=function(a){if(1>a)throw new Error("glog("+a+")");return G[a]};F.gexp=function(a){for(;0>a;)a+=255;for(;256<=a;)a-=255;return H[a]};for(var H=Array(256),G=Array(256),I=0;8>I;I++)H[I]=1<<I;for(I=8;256>I;I++)H[I]=H[I-4]^H[I-5]^H[I-6]^H[I-8];for(I=0;255>I;I++)G[H[I]]=I;function J(a,b){this.totalCount=a;this.dataCount=b}function K(a,b){var c=new v(a,b);return{addData:function(d){c.addData(d)},make:function(){c.make()},createSvgTag:function(q){q=q||{};var m=c.getModuleCount(),cell=q.cellSize||8,margin=q.margin||8,size=m*cell+2*margin*cell,svg='<svg xmlns="http://www.w3.org/2000/svg" width="'+size+'" height="'+size+'" shape-rendering="crispEdges"><rect width="100%" height="100%" fill="#ffffff"/><g transform="translate('+margin*cell+','+margin*cell+')">';for(var r=0;r<m;r++)for(var col=0;col<m;col++)if(c.isDark(r,col))svg+='<rect x="'+col*cell+'" y="'+r*cell+'" width="'+cell+'" height="'+cell+'" fill="#000000"/>';return svg+='</g></svg>'}}}window.qrcode=function(a,b){var c=new v(0,b||y.M);return{addData:function(d){c.addData(d)},make:function(){c.make()},createSvgTag:function(p){p=p||{};var m=c.getModuleCount(),cell=p.cellSize||8,margin=p.margin||8,size=m*cell+2*margin*cell,svg='<svg xmlns="http://www.w3.org/2000/svg" width="'+size+'" height="'+size+'" shape-rendering="crispEdges"><rect width="100%" height="100%" fill="#ffffff"/><g transform="translate('+margin*cell+','+margin*cell+')">';for(var r=0;r<m;r++)for(var col=0;col<m;col++)if(c.isDark(r,col))svg+='<rect x="'+col*cell+'" y="'+r*cell+'" width="'+cell+'" height="'+cell+'" fill="#000000"/>';return svg+='</g></svg>'},addJson:function(obj){c.addData(typeof obj==="string"?obj:JSON.stringify(obj))}};}();
+</script>
 
 <script>
   // Navigation
@@ -195,7 +203,8 @@
   const distTotEl=$('#distTot'), distPalierEl=$('#distPalier'), btnApply=$('#apply');
   const btnStartSetup=$('#startFromSetup');
   const btnStart=$('#start'), btnLap=$('#lap'), btnStop=$('#stop'), btnReset=$('#reset');
-  const btnExportCSV=$('#exportCSV'); const qrBox=$('#qrcode');
+  const btnExportCSV=$('#exportCSV'), btnOpenFullQR=$('#openFullQR');
+  const qrBox=$('#qrcode');
 
   // State
   let running=false, startTime=0, lastLapTime=0, rafId=0;
@@ -220,7 +229,7 @@
       toast('Renseigne Nom / Prénom / Classe / Sexe.'); return;
     }
     applyParams();
-    student={ nom:nom.value.trim(), prenom:prenom.value.trim(), classe:classe.value.trim(), sexe:sexe.value.trim() }; // M/F/A (laissé tel quel)
+    student={ nom:nom.value.trim(), prenom:prenom.value.trim(), classe:classe.value.trim(), sexe:sexe.value.trim() }; // M/F/A (UI)
     runMeta.innerHTML=`<span class="badge">${student.prenom} ${student.nom}</span> · Classe <b>${student.classe}</b> · Palier <b>${distPalier} m</b> · Cible <b>${distTot} m</b>`;
     goTo('page-run');
   });
@@ -234,7 +243,7 @@
     running=true; startTime=performance.now(); lastLapTime=0; paliersDone=0;
     progInfo.textContent=`${paliersDone} / ${nbPaliers}`;
     btnLap.disabled=false; btnStop.disabled=false; btnStart.disabled=true;
-    btnExportCSV.disabled=true; qrBox.innerHTML='';
+    btnExportCSV.disabled=true; btnOpenFullQR.disabled=true; qrBox.innerHTML='';
     rafId=requestAnimationFrame(tick);
   });
 
@@ -253,10 +262,10 @@
   function stopRun(){
     if(!running) return;
     running=false; cancelAnimationFrame(rafId); rafId=0;
-    btnLap.disabled=true; btnStop.disabled=true; btnStart.disabled=true; btnExportCSV.disabled=false;
+    btnLap.disabled=true; btnStop.disabled=true; btnStart.disabled=true; btnExportCSV.disabled=false; btnOpenFullQR.disabled=false;
 
     const payload=buildQRPayload();
-    renderQR(payload); // QR auto
+    renderQR(payload); // QR auto (SVG)
     setTimeout(()=>qrBox.scrollIntoView({behavior:'smooth',block:'start'}),50);
   }
 
@@ -264,43 +273,55 @@
   function hardReset(announce=true){
     running=false; cancelAnimationFrame(rafId); rafId=0; timeEl.textContent='00:00.00';
     lastLapTime=0; startTime=0; paliersDone=0; splits.length=0; tbody.innerHTML='';
-    progInfo.textContent=`0 / ${nbPaliers}`; btnStart.disabled=false; btnLap.disabled=true; btnStop.disabled=true; btnExportCSV.disabled=true; qrBox.innerHTML='';
+    progInfo.textContent=`0 / ${nbPaliers}`; btnStart.disabled=false; btnLap.disabled=true; btnStop.disabled=true; btnExportCSV.disabled=true; btnOpenFullQR.disabled=true; qrBox.innerHTML='';
     if(announce) toast('Paramètres/résultats réinitialisés.');
   }
 
-  // ✅ QR payload : nom, prenom, classe, sexe, puis uniquement les temps cumulés par distance
+  // ✅ QR payload : objet simple avec nom/prenom/classe/sexe + temps cumulés "200","400",...
   function buildQRPayload(){
+    // Si ScanProf n'accepte que M/F, on mappe "A" -> "F" ici :
+    const sexeScan = (student.sexe==='M'||student.sexe==='F') ? student.sexe : 'F';
+
     const record = {
       nom:     student.nom || "",
       prenom:  student.prenom || "",
       classe:  student.classe || "",
-      sexe:    student.sexe || ""   // si ScanProf n'accepte que M/F, on pourra mapper ici A->F ou A->M
+      sexe:    sexeScan
     };
     // clés numériques "200","400","600",...
     splits.forEach((s, i) => {
       const dist = distPalier * (i + 1);
       record[String(dist)] = fmtTime(s.cumMs);
     });
-    return [record]; // tableau attendu
+    return record; // objet (pas de tableau) pour maximiser la compat détection
   }
 
-  // QR render (QRCode.js)
+  // 🔳 Rendu QR en SVG avec quiet zone large (8) et taille lisible (≈384px)
   function renderQR(payload){
-    const str = JSON.stringify(payload);
-    qrBox.innerHTML = '';
     try{
-      new QRCode(qrBox, {
-        text: str,
-        width: 320,
-        height: 320,
-        correctLevel: QRCode.CorrectLevel.L
-      });
+      const qr = qrcode(0, 'M'); // type auto, correction M (équilibré). Essaye 'L' si besoin.
+      qr.addJson(payload);
+      qr.make();
+      const svg = qr.createSvgTag({ cellSize: 8, margin: 8 }); // quiet zone 8 modules, noir sur blanc
+      qrBox.innerHTML = svg;
+
+      // Bouton plein écran
+      btnOpenFullQR.onclick = () => {
+        const w = window.open('', '_blank');
+        w.document.write(`
+          <!doctype html><meta name="viewport" content="width=device-width,initial-scale=1">
+          <title>QR – Chrono Intervalles EPS</title>
+          <style>body{margin:0;background:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh}</style>
+          <div>${qr.createSvgTag({ cellSize: 12, margin: 10 })}</div>
+        `);
+        w.document.close();
+      };
     }catch(e){
       console.error(e); toast('Erreur QR.');
     }
   }
 
-  // Export CSV (inchangé)
+  // Export CSV
   function exportCSV(){
     if(!splits.length){ toast('Aucun temps à exporter.'); return; }
     const headers=['Palier (m)','Temps palier','Temps cumulé','Vitesse palier (km/h)'];
